[tool.poetry]
name = "plexutils"
version = "0.1.0"
description = ""
authors = ["Snaacky <snaacky@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
PlexAPI = "^4.13.0"
loguru = "^0.6.0"
pyaml-env = "^1.1.5"
tvdb-v4-official = "^1.0.12"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
